configuration pour les endpoint
